--- a/Additional Analysis of Adverse Drug Effects.ipynb
+++ b/Additional Analysis of Adverse Drug Effects.ipynb
@@ -917,6 +917,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_events_R(results, drug_name):\n",
+    "    \"\"\"Collate the data into the format for Calculate the events reported for proportionality analysis\"\"\"\n",
+    "    \n",
+    "    events=[]\n",
+    "    for page in results:\n",
+    "        for result in page:\n",
+    "            if 'patient' in result.keys():\n",
+    "                if 'patientsex' in result['patient'].keys():\n",
+    "                    sex=result['patient']['patientsex']\n",
+    "                else:\n",
+    "                    sex=None\n",
+    "                if 'patientonsetage' in result['patient'].keys():\n",
+    "                    age=result['patient']['patientonsetage']\n",
+    "                else:\n",
+    "                    age=None\n",
+    "                    \n",
+    "                \n",
+    "                for reaction in result['patient']['reaction']:\n",
+    "                    effect=reaction['reactionmeddrapt']\n",
+    "                    events.append({'sex':sex, 'age':age, \"var1\":drug_name,\"var2\":effect})\n",
+    "    #events={ k: v for k, v in events.items() if v >= 20 }\n",
+    "    return events\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "product_event=[]\n",
+    "# Get which product co-occur in reports (drugs tend to be taken together)\n",
+    "for product in product_list:\n",
+    "    print(f'Processing {product}')\n",
+    "    results=extract_pages(product)\n",
+    "    prod_events=process_events(results)\n",
+    "    product_event.append(prod_events)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10934\n"
+     ]
+    }
+   ],
+   "source": [
+    "product=\"afinitor\"\n",
+    "results=extract_pages(product)\n",
+    "events=process_events_R(results, product)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
