--- a/Exploratory Data Analysis of Adverse Drug Effects Dataset.ipynb
+++ b/Exploratory Data Analysis of Adverse Drug Effects Dataset.ipynb
@@ -315,18 +315,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Country Based Analysis"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "As many countries can report into the database, we will analyse which countries does the event occur."
    ]
@@ -334,9 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -354,9 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -520,7 +512,7 @@
    "source": [
     "res=pd.DataFrame(res)\n",
     "res['Code']=res['term'].str.upper()\n",
-    "country=pd.read_csv(\"country_csv.txt\")#ISO 3166-1-alpha-2 English country names and code elements\n",
+    "country=pd.read_csv(\"./data/country_csv.txt\")#ISO 3166-1-alpha-2 English country names and code elements\n",
     "country_analysis=pd.merge(res,country, on='Code').drop(columns=['term','Code'])\n",
     "country_analysis[0:20]#Top 20 country"
    ]
@@ -528,9 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -549,9 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "From the above chart, other than US, the most countries where the event occurs are in Japan, France, Germany and UK. We will analyse the **top 5 countries other than US** to investigate what they report."
    ]
@@ -559,9 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -584,7 +570,6 @@
    "cell_type": "code",
    "execution_count": 193,
    "metadata": {
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -652,9 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "From the above analysis, it seems that there is variations in the reactions that are reported in various countries. Below, we can compare that with the US, where most reported reaction from physicians are \"Drug ineffective\", whereas in other countries, the reactions are relatively precise. Similarly in the US there is a lot of \"off label use\". However, not sure these are reactions and perhaps are more related to usage.\n",
     "\n",
@@ -664,9 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -696,9 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "**Analyse the top drugs reported in each country**\n",
     "\n",
@@ -717,7 +696,6 @@
    "cell_type": "code",
    "execution_count": 195,
    "metadata": {
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -787,7 +765,6 @@
    "cell_type": "code",
    "execution_count": 196,
    "metadata": {
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -856,7 +833,6 @@
    "cell_type": "code",
    "execution_count": 198,
    "metadata": {
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -922,9 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "**Analysing the what cases (seriousness) are reported in most countries**"
    ]
@@ -932,9 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -976,9 +948,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "As expected most of the serious cases are reported (an event resulting in death, a life threatening condition, hospitalization, disability, congenital anomaly, or other serious condition)."
    ]
