--- a/Additional Analysis of Adverse Drug Effects.ipynb
+++ b/Additional Analysis of Adverse Drug Effects.ipynb
@@ -916,6 +916,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will R to analyse the proportionality. For this the data have to be in event, product format and we are augmenting with stratified data (sex, age). The below code cells converts the data and stores it in the data directory"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 164,
    "metadata": {},
@@ -947,37 +954,193 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "product_event=[]\n",
-    "# Get which product co-occur in reports (drugs tend to be taken together)\n",
-    "for product in product_list:\n",
-    "    print(f'Processing {product}')\n",
-    "    results=extract_pages(product)\n",
-    "    prod_events=process_events(results)\n",
-    "    product_event.append(prod_events)\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10934\n"
+      "10934\n",
+      "37950\n",
+      "1156\n",
+      "32407\n"
      ]
     }
    ],
    "source": [
-    "product=\"afinitor\"\n",
-    "results=extract_pages(product)\n",
-    "events=process_events_R(results, product)"
+    "product_event=[]\n",
+    "\n",
+    "for product in product_list:\n",
+    "    results=extract_pages(product)\n",
+    "    events=process_events_R(results, product)\n",
+    "    product_event.append(events)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sex</th>\n",
+       "      <th>age</th>\n",
+       "      <th>var1</th>\n",
+       "      <th>var2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>F</td>\n",
+       "      <td>None</td>\n",
+       "      <td>afinitor</td>\n",
+       "      <td>Metastases to bone</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>F</td>\n",
+       "      <td>None</td>\n",
+       "      <td>afinitor</td>\n",
+       "      <td>Osteonecrosis of jaw</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>F</td>\n",
+       "      <td>7</td>\n",
+       "      <td>afinitor</td>\n",
+       "      <td>Epilepsy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>F</td>\n",
+       "      <td>7</td>\n",
+       "      <td>afinitor</td>\n",
+       "      <td>Mood altered</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>F</td>\n",
+       "      <td>7</td>\n",
+       "      <td>afinitor</td>\n",
+       "      <td>Stomatitis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226049</th>\n",
+       "      <td>F</td>\n",
+       "      <td>None</td>\n",
+       "      <td>QUETIAPINE</td>\n",
+       "      <td>CARDIAC VALVE DISEASE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226050</th>\n",
+       "      <td>F</td>\n",
+       "      <td>None</td>\n",
+       "      <td>QUETIAPINE</td>\n",
+       "      <td>ELECTROCARDIOGRAM QT PROLONGED</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226051</th>\n",
+       "      <td>M</td>\n",
+       "      <td>42</td>\n",
+       "      <td>QUETIAPINE</td>\n",
+       "      <td>SELF INJURIOUS BEHAVIOUR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226052</th>\n",
+       "      <td>M</td>\n",
+       "      <td>42</td>\n",
+       "      <td>QUETIAPINE</td>\n",
+       "      <td>SOPOR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226053</th>\n",
+       "      <td>F</td>\n",
+       "      <td>24</td>\n",
+       "      <td>QUETIAPINE</td>\n",
+       "      <td>AGRANULOCYTOSIS</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>226054 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       sex   age        var1                            var2\n",
+       "id                                                          \n",
+       "0        F  None    afinitor              Metastases to bone\n",
+       "1        F  None    afinitor            Osteonecrosis of jaw\n",
+       "2        F     7    afinitor                        Epilepsy\n",
+       "3        F     7    afinitor                    Mood altered\n",
+       "4        F     7    afinitor                      Stomatitis\n",
+       "...     ..   ...         ...                             ...\n",
+       "226049   F  None  QUETIAPINE           CARDIAC VALVE DISEASE\n",
+       "226050   F  None  QUETIAPINE  ELECTROCARDIOGRAM QT PROLONGED\n",
+       "226051   M    42  QUETIAPINE        SELF INJURIOUS BEHAVIOUR\n",
+       "226052   M    42  QUETIAPINE                           SOPOR\n",
+       "226053   F    24  QUETIAPINE                 AGRANULOCYTOSIS\n",
+       "\n",
+       "[226054 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flat_list = [item for sublist in product_event for item in sublist]\n",
+    "df=pd.DataFrame(flat_list)\n",
+    "df.loc[df['sex']=='2', \"sex\"]=\"F\" # Code for replaceing the value to female\n",
+    "df.loc[df['sex']=='1', \"sex\"]=\"M\" # Code for replaceing the value to male\n",
+    "#df.loc[df['age']==None, \"sex\"]=np.nan\n",
+    "df.index.names=['id']\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"./data/product_event_strat.csv\")"
    ]
   },
   {
